# palc

./: .gitignore  Cargo.toml  README.md  bench.sh  bench.txt
.github/workflows/: ci.yaml
compile-bench/: Cargo.toml
derive/: Cargo.toml
derive/src/: common.rs  derive_args.rs  derive_parser.rs  derive_subcommand.rs  derive_value_enum.rs  error.rs  lib.rs
examples/: criterion-argh.rs  criterion-palc.rs  deno-palc.rs  simple-palc.rs
examples/util/: deno.rs
src/: error.rs  help.rs  lib.rs  refl.rs  runtime.rs  shared.rs  util.rs  values.rs  version.rs
test-suite/: Cargo.toml
tests/: help.rs  parse.rs  smoke.rs  ui.rs  value_enum.rs  version.rs
tests/ui/: args-default-value.rs  args-default-value.stderr  args-duplicated-names.rs  args-duplicated-names.stderr  args-flatten-non-args.rs  args-flatten-non-args.stderr  args-flatten-positional.rs  args-flatten-positional.stderr  args-flatten-subcommand.rs  args-flatten-subcommand.stderr  args-flatten-unnamed.rs  args-flatten-unnamed.stderr  args-invalid-ignore_case.rs  args-invalid-ignore_case.stderr  args-invalid-names.rs  args-invalid-names.stderr  args-subcommand-non-subcommand.rs  args-subcommand-non-subcommand.stderr  args-type-not-args.stderr  args-type-not-subcommand.stderr  args-type-unparsable.rs  args-type-unparsable.stderr  args-unsupported-data.rs  args-unsupported-data.stderr  no-generic.rs  no-generic.stderr  parser-manual-impl.rs  parser-manual-impl.stderr  parser-unsupported-data.rs  parser-unsupported-data.stderr  subcommand-unsupported-data.rs  subcommand-unsupported-data.stderr  value_enum-unsupported-data.rs  value_enum-unsupported-data.stderr
