[workspace]
resolver = "3"
members = [".", "derive", "test-suite"]

[workspace.package]
repository = "https://github.com/oxalica/palc"
license = "MIT OR Apache-2.0"
categories = ["command-line-interface"]
keywords = ["argument", "cli", "arg", "parser", "clap"]
edition = "2024"
# NB. Sync with CI.
rust-version = "1.87" # const <[_]>::copy_from_slice

[package]
name = "palc"
version = "0.0.1"
description = "WIP: Command Line Argument Parser with several opposite design goal from Clap"
exclude = ["*.sh"] # Shortcut scripts.
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = ["help"]
help = []

[dependencies]
os_str_bytes = { version = "7.1.0", default-features = false, features = ["raw_os_str"] }
palc-derive = { path = "./derive", version = "=0.0.1" }
ref-cast = "1.0.24"

[dev-dependencies]
argh = { version = "0.1.13", default-features = false }
clap = { version = "4.5.35", default-features = false, features = ["std", "derive", "error-context", "help", "usage"] }
expect-test = "1.5.1"
trybuild = { version = "1.0.108", features = ["diff"] }

[lints.clippy]
dbg-macro = "warn"
# TODO: todo = "warn"

[profile.minimal]
inherits = "release"
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.docs.rs]
all-features = true
